Table roles {
  id_rol int [pk, increment]
  nombre_rol varchar(50) [unique, not null]
  descripcion varchar(255)
}

Table usuarios {
  id_usuario int [pk, increment]
  nombre varchar(100) [not null]
  apellido varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null]
  id_rol int [not null]
  fecha_registro datetime [default: `now()`]
  activo boolean [default: true]
}

Table equipos {
  id_equipo int [pk, increment]
  nombre_equipo varchar(100) [not null]
  descripcion varchar(255)
  fecha_creacion datetime [default: `now()`]
}

Table usuario_equipo {
  id_usuario_equipo int [pk, increment]
  id_usuario int [not null]
  id_equipo int [not null]
  fecha_asignacion datetime [default: `now()`]
}

Table tareas {
  id_tarea int [pk, increment]
  titulo varchar(150) [not null]
  descripcion text
  estado varchar(20) [default: 'pendiente']
  prioridad varchar(20) [default: 'media']
  id_equipo int
  id_usuario_asignado int
  fecha_creacion datetime [default: `now()`]
  fecha_limite datetime
}

Ref: usuarios.id_rol > roles.id_rol
Ref: usuario_equipo.id_usuario > usuarios.id_usuario
Ref: usuario_equipo.id_equipo > equipos.id_equipo
Ref: tareas.id_equipo > equipos.id_equipo
Ref: tareas.id_usuario_asignado > usuarios.id_usuario